Not yet mostly working, but in progress.

--- a/docs/specification.tex
+++ b/docs/specification.tex
@@ -86,8 +86,7 @@ My language expects a text file of the .rpg format. Example: dotnet run "gamenam
 
 Example 1. \\ 
 
-There is a room named "Foyer" 
-with description: "A modest foyer with not much to look at. Another person stands in the room.".
+There is a room named "Foyer" with description: "A modest foyer with not much to look at. Another person stands in the room.",
 with objects: Playable character named "Samuel" with stats: hp = 10, mp = 10, atk = 10, def = 10, matk = 10, mdef = 10, spd = 10 and abilities:, 
 Nonplayable character named "Katerina" with stats: hp = 10, mp = 10, atk = 10, def = 10, matk = 10, mdef = 10, spd = 10 and abilities:.
 with connections: North is "Living Room". \\
